# loan-risk-evaluator

./: .gitignore  README.md  cli.py  package-lock.json  pyproject.toml  requirements.txt  run.py
app/: __init__.py  api.py  eligibility.py  storage.py
static/: index.html
templates/: index.html
